<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_one"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="159dp"
        android:layout_height="183dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="179dp">

        <TableRow android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:gravity="center"
                android:text="@string/montreal"
                android:textColor="@color/white"
                android:textSize="@dimen/montreal" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="159dp"
                android:layout_height="81dp"
                android:lineHeight="70sp"
                android:text="@string/_19_u00b0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="70sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="159dp"
                android:layout_height="match_parent"
                android:lineHeight="70sp"
                android:text="@string/mostly_clear"
                android:textAlignment="center"
                android:textColor="@color/forecast"
                android:textFontWeight="600"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="115dp"
                android:layout_height="48dp"
                android:lineHeight="70sp"
                android:text="@string/h_24_u00b0_l_18_u00b0"
                android:textAlignment="center"
                android:textColor="#EBEBF5"
                android:textSize="20sp"
                android:textStyle="normal" />
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/cloud"
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <include
            layout="@layout/clouds_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cloud_first"
        android:layout_width="430dp"
        android:layout_height="600dp"
        android:layout_marginStart="-430dp">

        <include
            layout="@layout/clouds_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:layout_gravity="bottom">
        <include
            layout="@layout/bottom_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</FrameLayout>