<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2543"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:background="@drawable/shape_sec_ac_circle"
        android:importantForAccessibility="no"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="116dp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="425dp"
        android:layout_height="425dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="396dp"
        android:importantForAccessibility="no"

        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/shape_sec_ac_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/montr"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/montreal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/montreal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/mostly"
        android:textAlignment="center"
        android:textColor="@color/forecast"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/montr" />


    <include
        layout="@layout/degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        style="bold|default"
        android:layout_width="111dp"
        android:layout_height="20dp"
        android:layout_marginTop="130dp"
        android:text="@string/hourly_forecast"
        android:textColor="#919198"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="bold|default"
        android:layout_width="111dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:text="@string/hourly_forecast"
        android:textColor="#919198"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_uv_index"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:background="@drawable/shape_line_gradient"
        android:foregroundGravity="center_horizontal"
        android:outlineAmbientShadowColor="#E31D1D"
        android:progress="30"
        android:thumbTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="153dp"
        android:layout_height="27dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/baseline_blur_on_24"
        android:text="@string/air_quality"
        android:textColor="@color/forecast"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/health_risk"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="308dp"
        android:layout_height="21dp"
        android:layout_marginTop="50dp"
        android:drawableEnd="@drawable/see_more"
        android:onClick="seeMore"
        android:text="@string/see_more"
        android:textColor="@color/material_dynamic_neutral90"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="no"
        android:src="@drawable/shape_uv_index"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/sun_icons"
        android:fontFamily="serif"
        android:text="@string/uv_index"
        android:textColor="@color/forecast"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/imageView5"
        app:layout_constraintTop_toTopOf="@id/imageView5"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:layout_width="29dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="4"
        android:textColor="@color/white"
        android:textSize="@dimen/four"
        app:layout_constraintStart_toStartOf="@id/imageView5"
        app:layout_constraintTop_toTopOf="@id/imageView5" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="Moderate"
        android:textColor="@color/white"
        android:textSize="@dimen/under_four"
        app:layout_constraintStart_toStartOf="@id/imageView5"
        app:layout_constraintTop_toTopOf="@id/imageView5" />

    <SeekBar
        android:id="@+id/seekBarTwo"
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/shape_line_gradient"
        android:foregroundGravity="center_horizontal"
        android:outlineAmbientShadowColor="#E31D1D"
        android:thumbTint="@color/white"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.468" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="no"
        android:src="@drawable/shape_uv_index"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/sun_icons"
        android:fontFamily="serif"
        android:text="@string/sunrise"
        android:textColor="@color/forecast"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/imageView6"
        app:layout_constraintTop_toTopOf="@id/imageView6"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/_5_28_am"
        android:textColor="@color/white"
        android:textSize="@dimen/four"
        app:layout_constraintStart_toStartOf="@id/imageView6"
        app:layout_constraintTop_toTopOf="@id/imageView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:text="@string/sunset_7_25pm"
        android:textColor="@color/forecast"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/imageView6"
        app:layout_constraintTop_toTopOf="@id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="no"
        android:src="@drawable/shape_uv_index"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp" />

    <include
        android:id="@+id/include"
        layout="@layout/compas_layout"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@id/imageView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageview8"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="no"
        android:src="@drawable/shape_uv_index"
        app:layout_constraintStart_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/_1_8_mm"
        android:textColor="@color/white"
        android:textSize="@dimen/four"
        app:layout_constraintStart_toStartOf="@+id/imageview8"
        app:layout_constraintTop_toTopOf="@+id/imageview8" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/in_last_hour"
        android:textColor="@color/white"
        android:textSize="@dimen/under_four"
        app:layout_constraintStart_toStartOf="@+id/imageview8"
        app:layout_constraintTop_toTopOf="@+id/imageview8" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="imageView6" />


</androidx.constraintlayout.widget.ConstraintLayout>